// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renering and behavior should render <Input/> correctly 1`] = `
<div
  className="css-1jxo5rv"
>
  <label
    className="css-savvye"
  >
    Text Input
  </label>
  <input
    className="css-37u041"
    placeholder="write something"
    type="text"
  />
</div>
`;

exports[`Input component renering and behavior should render <Input/> with error 1`] = `
<div
  className="css-1jxo5rv"
>
  <label
    className="css-savvye"
  >
    Text Input Error
  </label>
  <input
    className="css-37u041"
    placeholder="write something"
    type="text"
  />
</div>
`;
